--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
     <script>
       var dream = prompt("Noi cho toi biet uoc mo cua ban:");
       
-      document.getElementById("dream-area").innerHTML=dream;
+      document.write("dream")
     </script>
     <style>
+      body{
+      font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+      }
       h1{
       font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
       text-align: center;
