--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       Others People Dreams:
     </h1>
     <p id="dream-area">
-      Play game all day :)
+      Chơi game cả ngày :)
       <br>
-      Sleep all day :)
+      Được tặng iPhone 13 Pro Max :33
     </p>
     <script>
       var dream = prompt("Noi cho toi biet uoc mo cua ban:");
       
-      document.write("dream")
+      document.write(dream);
     </script>
     <style>
       body{
